# wasm-bindgen-rayon

./: .gitignore  109.index.js  125.index.js  204.index.js  214.index.js  232.index.js  249.index.js  296.index.js  308.index.js  372.index.js  443.index.js  464.index.js  474.index.js  490.index.js  491.index.js  522.index.js  60.index.js  601.index.js  604.index.js  665.index.js  67.index.js  679.index.js  73.index.js  731.index.js  768.index.js  780.index.js  801.index.js  813.index.js  831.index.js  851.index.js  87.index.js  924.index.js  997.index.js  Cargo.toml  README.md  index.html  index.js
.github/workflows/: ci.yml  deploy.yml
demo/: Cargo.toml  index.js  package-lock.json  package.json  webpack.config.mjs
demo/src/: lib.rs
src/: lib.rs  workerHelpers.js  workerHelpers.no-bundler.js  workerHelpers.worker.js
test/: Cargo.toml  README.md  index.html  index.js  index.worker.js  package-lock.json  package.json  playwright.config.mjs  rollup.config.mjs  run-tests.mjs  rust-toolchain.toml  serve.json  tests.spec.mjs  vite.config.mjs  webpack.config.mjs
test/.cargo/: config.toml
