[package]
name = "wasm-bindgen-rayon"
version = "1.1.3"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Adapter for using Rayon-based concurrency on the Web"
keywords = ["web", "thread", "parallel", "concurrency", "webassembly"]
categories = ["concurrency", "wasm", "web-programming"]
readme = "README.md"
exclude = [".github"]
repository = "https://github.com/RReverser/wasm-bindgen-rayon"

[dependencies]
wasm-bindgen = "0.2.74"
rayon-core = "1.12"
spmc = "0.3.0"
js-sys = "0.3.48"

[workspace]
members = ["demo", "test"]

[features]
nightly = []
no-bundler = []

[package.metadata.docs.rs]
features = ["nightly"]
targets = ["wasm32-unknown-unknown"]
rustc-args = ["-C", "target-feature=+atomics,+bulk-memory"]
